# ArmFaceID

./: .clang-format  .gitignore  .gitmodules  2  CMakeLists.txt  README.md  aarch64-build.sh  aarch64.cmake  env_configure.sh  face_recognizer.cpp  face_recognizer.h  main.cpp  mainwindow.h  mainwindow.ui  path_config.cmake  readme.md  run-client.bat  run-server.bat  run-server.sh  test_save.faces
.cache/clangd/index/: display_widget.cpp.3208854AD8EC110E.idx  display_widget.cpp.93D09F931DFC6E8B.idx  display_widget.h.57E8B7514B42ABDB.idx  display_widget.h.70CD0D7793AA0307.idx  face_engine.h.23B4DA0BCE3DEE17.idx  face_engine.h.ECEFB739BBC54118.idx  face_processor.cpp.4F5140EC4678DD54.idx  face_processor.cpp.8D016529DD3F3F2D.idx  face_processor.h.4F59727B9FEBBB26.idx  face_processor.h.CDDB612906D75397.idx  face_processor_listener.cpp.09BD4AA833454F14.idx  face_processor_listener.cpp.D38CD45C19201EBA.idx  face_processor_listener.h.117C939E4A4E1C04.idx  face_processor_listener.h.EE7E58545B18FD2B.idx  main.cpp.3A97A0ABBFF78FE3.idx  main.cpp.48C914F99FD60974.idx  main.cpp.5C7EB758D2AFA367.idx  main.cpp.8A4DAD6E948AD6B2.idx  rpc_client.cpp.8D1858B01FB5E3E0.idx  rpc_client.cpp.DAF3B36502E5530F.idx  rpc_client.h.83F718C1F6AEC810.idx  rpc_client.h.A5BC19F60FBBC293.idx  rpc_manager.cpp.757FDDBFE63A2A59.idx  rpc_manager.cpp.B6F7A40836C67605.idx  rpc_manager.h.0C1CCCA552684E2D.idx  rpc_manager.h.596491722AE06722.idx  utils.cpp.0DB3EA38A34F5ED3.idx  utils.cpp.86CE9B9F44172122.idx  utils.cpp.B8F48B70051D6EF2.idx  utils.cpp.C41007C47AAAEE4C.idx  utils.h.9A71CA2062DE90BD.idx  utils.h.9FE5674AD7A9CAF5.idx  utils.h.A4931878B2196612.idx  utils.h.D57C4907817A3B3C.idx
.github/workflows/: cmake-multi-platform.yml
_client/: CMakeLists.txt  display_widget.cpp  display_widget.h  face_processor.cpp  face_processor.h  main.cpp  rpc_client.cpp
client/: CMakeLists.txt  camera.cpp  camera.h  display_widget.cpp  display_widget.h  face_processor.cpp  face_processor.h  face_processor_listener.h  face_recognizer.cpp  face_recognizer.h  gui.cpp  gui.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpc_client.cpp  rpc_client.h  utils.cpp  utils.h
client/utils/: utils.cpp
demo_serenNan/: CMakeLists.txt  note.md  note_serenNan.md
demo_serenNan/proto/: helloworld.proto
demo_serenNan/src/client/: CMakeLists.txt  greeter_client.cc
demo_serenNan/src/server/: CMakeLists.txt  greeter_server.cc
model/: CMakeLists.txt
note/: note-24-10-3.md  note-24-10-4.md  note-24-8-13.md  note-24-8-14.md  note-24-8-15.md  note-24-8-16.md  note-24-8-5.md  note-24-8-6.md  note-24-8-7.md  note-24-8-8.md  note-24-9-9.md  note-25-10-2.md  开发Tips：如何实现一个rpc接口.md
proto/: CMakeLists.txt  face_network.proto
script/: aarch64-build.sh  amd64-win-build.bat  env_configure.sh  run-client.sh  run-server.sh  run_example.sh
server/: CMakeLists.txt  ela_gui.cpp  ela_gui.h  engine.cpp  engine.h  face_database.cpp  face_database.h  face_engine.h  gui.cpp  gui.h  main.cpp  rpc_manager.cpp  rpc_manager.h
server/gui/: ela_gui.cpp  ela_gui.h  gui.cpp  gui.h  recognition_page.cpp  recognition_page.h  register_page.cpp  register_page.h  tableview_page.cpp  tableview_page.h
server/include/: camera.h  engine.h  face_database.h  gui.h
server/include/database/: mysql.h  schema.h  user.h
server/include/utils/: base.h
server/src/: camera.cpp  engine.cpp  face_database.cpp  gui.cpp  main.cpp
server/src/database/: mysql.cpp
server/src/utils/: base.cpp
server/table_model/: user_table_model.cpp  user_table_model.h
server/utils/: utils.cpp  utils.h
test_serenNan/: CMakeLists.txt  note.md
test_serenNan/src/client/: CMakeLists.txt  greeter_client.cc
test_serenNan/src/server/: CMakeLists.txt  greeter_server.cc
utils/: CMakeLists.txt  face_camera.cpp  face_camera.h  function.cpp  function.h  interface.h  utils.h
